<resources>
    <string name="app_name">MyCAfe</string>
    <string name="AromaDeMogi">Aroma de mogi</string>
    <string name="Titulo">PAITER CAFÉ</string>
    <string name="Login">Login</string>
    <string name="Cadastro">Cadastre-se</string>
    <string name="about">Sobre</string>
    <string name="insta">\@paitercafe</string>
    <string name="Email">Email</string>
    <string name="FacaLogin">Faça o login</string>
    <string name="placeholderEmail">Digite seu Email</string>
    <string name="Senha">Senha</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="voltar">voltar</string>
    <string name="Continuar">Continuar</string>
    <string name="Menu">Menu</string>
    <string name="adicionarAoCarrinho">Adicionar ao Carrinho</string>
    <string name="FacaoCadastro">Faça o Cadastro</string>
    <string name="ConnfirmeSenha">Confirme a Senha</string>
    <string name="textoSobre">Desde 2023 trazendo a melhor experiencia em saborizar um bom café, nossa missão é aguçar os paladares de todo Brasil, conquistando e trazendo o melhor serviço para sua satisfalçao, é cafe chama a PaiterCafé.</string>
    <string name="Remover">Remover</string>
    <string name="Adicionar">Adicionar</string>
    <string name="carrinho">Carrinho</string>
    <string name="ErroSenha">"Digite uma senha com no mínimo 6 caracteres"</string>
    <string name="ErroEmail">Digite um e-mail válido</string>
    <string name="Preco01">Café Simples:\n 2,50</string>
    <string name="Preco02">Café expresso: \n 3,50</string>
    <string name="Preco03">Cappuccino:\n4,00</string>
    <string name="Preco04">Chocolate:\n3,50</string>
    <string name="Preco05">Café + leite: \n 2,50</string>
    <string name="Preco06">Café Paixão:\n 5,00</string>

</resources>