<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiveLogin"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_top" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="@string/AromaDeMogi"
            android:textAlignment="center"
            android:textColor="@color/paiterColor"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Titulo"
            android:layout_marginTop="50dp"
            android:textAlignment="center"

            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/FacaLogin"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Email"
            android:layout_marginLeft="20dp"

            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:hint="@string/placeholderEmail"
            />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>