<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/grayWhite"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_paiterhome"
        android:layout_marginTop="-150dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="25dp"

        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Cadastro"


        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insta"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        />




</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>