<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiveCadastro"
    android:background="@color/grayWhite"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_top" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="@string/AromaDeMogi"
            android:textAlignment="center"
            android:textColor="@color/paiterColor"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Titulo"
            android:layout_marginTop="50dp"
            android:textAlignment="center"

            />


        <TextView
            android:id="@+id/facaOCadastro"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/FacaoCadastro"
            android:textAlignment="center"
            />
        <!--campo Cadastro-->
        <LinearLayout
            android:id="@+id/campoEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"



            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Email"
                android:layout_marginLeft="20dp"

                />


            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                >


                <Button
                    android:id="@+id/CadastrobtnProsseguir"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/prosseguir"
                    style="@style/RoundedButton"

                    />
                <Button
                    android:id="@+id/cadastroBtnvoltarMenu"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/voltar"
                    android:textSize="10sp"
                    android:layout_marginLeft="50dp"
                    style="@style/RoundedButton"
                    />

            </LinearLayout>


        </LinearLayout>
        <!--campo senha-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/campoSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Senha"
                android:layout_marginLeft="20dp"

                />


            <EditText
                android:id="@+id/senhacadastro"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:inputType="text"

                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/ConnfirmeSenha"
                android:layout_marginLeft="20dp"

                />


            <EditText
                android:id="@+id/confirmarSenha"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:inputType="text"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="50dp"
                >


                <Button
                    android:id="@+id/continuebtnCadastro"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/Continuar"
                    style="@style/RoundedButton"
                    />
                <Button
                    android:id="@+id/voltarCampoSenhaCadastro"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/voltar"
                    android:textSize="10sp"
                    android:layout_marginLeft="50dp"
                    style="@style/RoundedButton"
                    />

            </LinearLayout>


        </LinearLayout>





    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>