<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiveSobre"
    android:background="@color/grayWhite"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_top" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="@string/AromaDeMogi"
            android:textAlignment="center"
            android:textColor="@color/paiterColor"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:text="@string/Titulo"
            android:textAlignment="center"

            />


        <LinearLayout

            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/textoSobre"
                android:textAlignment="center" />


            <Button
                android:id="@+id/voltarSobre"
                style="@style/RoundedButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/voltar"
                android:textSize="10sp" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>