<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activeloja"
    android:orientation="vertical"
    android:background="@color/grayWhite"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:background="@drawable/img_menu"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrinho"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:textColor="@color/paiterColor"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            >



            <TextView
                android:id="@+id/textCarrinho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="50dp"
                android:gravity="center"

                />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="25dp"

                >




                <Button
                    android:id="@+id/btnAdicionar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Adicionar"
                    />
                <Button
                    android:id="@+id/btnRemover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remover"
                    android:layout_marginLeft="25dp"

                    />


            </LinearLayout>






            <Button
                android:id="@+id/btnVoltarStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/voltar"
                />
        </LinearLayout>



















    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>